test/parsetest/valid/function-call-array-access.java
class Some {
  public static void main(String[] args) {
    myFunc()[3] = true;
  }
}


