test/parsetest/invalid/main_signature.java
class Invalid1 {

	public static void main(String args) { }

}
